<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ChatFragment"
    android:background="@color/frag_bg_color">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hand_shake"/>

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/Custom.EditText"
            android:inputType="number|phone"
            android:id="@+id/edit_text_nomorHp"
            android:hint="@string/nomor_hp"
            android:layout_marginTop="54dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/Custom.EditText"
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/edit_text_costPaket"
                android:hint="@string/nominal_paket"
                android:layout_width="match_parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_mode"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/kirim_wa"/>

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/telepon"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveContact"
            android:background="@drawable/custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/simpan_kontak"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>