<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <RelativeLayout
            android:background="@drawable/dialog_top_bg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center">

            <TextView
                android:id="@+id/dialogTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/simpan_kontak"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@drawable/dialog_bottom_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:inputType="text"
                style="@style/Custom.DialogEditText"
                android:id="@+id/editTextCustomerName"
                android:hint="@string/nama_kontak"
                android:layout_marginTop="8dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:inputType="phone"
                style="@style/Custom.DialogEditText"
                android:id="@+id/editTextNumberPhone"
                android:hint="@string/nomor_hp"
                android:layout_marginTop="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveContact"
                android:background="@drawable/custom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/simpan"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>